@@ -1,168 +1,318 @@
+import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
-import java.util.List;
 
 public class qp {
-   public static final aju<egz> a = qg.a("trail_ruins/tower");
+   public static final ake<ehp> a = qq.a("village/plains/town_centers");
+   private static final ake<ehp> b = qq.a("village/plains/terminators");
 
-   public static void a(pz<egz> $$0) {
-      io<egz> $$1 = $$0.a(ku.aJ);
-      in<egz> $$2 = $$1.b(qg.a);
-      io<ejo> $$3 = $$0.a(ku.aH);
-      in<ejo> $$4 = $$3.b(qh.J);
-      in<ejo> $$5 = $$3.b(qh.K);
-      in<ejo> $$6 = $$3.b(qh.L);
+   public static void a(qj<ehp> $$0) {
+      iw<efk> $$1 = $$0.a(ld.aH);
+      iv<efk> $$2 = $$1.b(sg.f);
+      iv<efk> $$3 = $$1.b(sg.k);
+      iv<efk> $$4 = $$1.b(sg.a);
+      iw<eke> $$5 = $$0.a(ld.aJ);
+      iv<eke> $$6 = $$5.b(qr.f);
+      iv<eke> $$7 = $$5.b(qr.g);
+      iv<eke> $$8 = $$5.b(qr.h);
+      iv<eke> $$9 = $$5.b(qr.a);
+      iv<eke> $$10 = $$5.b(qr.i);
+      iv<eke> $$11 = $$5.b(qr.l);
+      iw<ehp> $$12 = $$0.a(ld.aL);
+      iv<ehp> $$13 = $$12.b(qq.a);
+      iv<ehp> $$14 = $$12.b(b);
       $$0.a(
          a,
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/tower/tower_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_5", $$4), 1)
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/town_centers/plains_fountain_01", $$7), 50),
+               Pair.of(ehn.a("village/plains/town_centers/plains_meeting_point_1", $$7), 50),
+               Pair.of(ehn.a("village/plains/town_centers/plains_meeting_point_2"), 50),
+               Pair.of(ehn.a("village/plains/town_centers/plains_meeting_point_3", $$8), 50),
+               Pair.of(ehn.a("village/plains/zombie/town_centers/plains_fountain_01", $$9), 1),
+               Pair.of(ehn.a("village/plains/zombie/town_centers/plains_meeting_point_1", $$9), 1),
+               Pair.of(ehn.a("village/plains/zombie/town_centers/plains_meeting_point_2", $$9), 1),
+               Pair.of(ehn.a("village/plains/zombie/town_centers/plains_meeting_point_3", $$9), 1)
             ),
-            egz.a.b
+            ehp.a.b
          )
       );
-      qg.a(
+      qq.a(
          $$0,
-         "trail_ruins/tower/tower_top",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/tower/tower_top_1", $$6), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_top_2", $$6), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_top_3", $$6), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_top_4", $$6), 1),
-               Pair.of(egx.b("trail_ruins/tower/tower_top_5", $$6), 1)
+         "village/plains/streets",
+         new ehp(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/streets/corner_01", $$10), 2),
+               Pair.of(ehn.a("village/plains/streets/corner_02", $$10), 2),
+               Pair.of(ehn.a("village/plains/streets/corner_03", $$10), 2),
+               Pair.of(ehn.a("village/plains/streets/straight_01", $$10), 4),
+               Pair.of(ehn.a("village/plains/streets/straight_02", $$10), 4),
+               Pair.of(ehn.a("village/plains/streets/straight_03", $$10), 7),
+               Pair.of(ehn.a("village/plains/streets/straight_04", $$10), 7),
+               Pair.of(ehn.a("village/plains/streets/straight_05", $$10), 3),
+               Pair.of(ehn.a("village/plains/streets/straight_06", $$10), 4),
+               Pair.of(ehn.a("village/plains/streets/crossroad_01", $$10), 2),
+               Pair.of(ehn.a("village/plains/streets/crossroad_02", $$10), 1),
+               Pair.of(ehn.a("village/plains/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/plains/streets/crossroad_04", $$10), 2),
+                  Pair.of(ehn.a("village/plains/streets/crossroad_05", $$10), 2),
+                  Pair.of(ehn.a("village/plains/streets/crossroad_06", $$10), 2),
+                  Pair.of(ehn.a("village/plains/streets/turn_01", $$10), 3)
+               }
             ),
-            egz.a.b
+            ehp.a.a
          )
       );
-      qg.a(
+      qq.a(
          $$0,
-         "trail_ruins/tower/additions",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/tower/hall_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/hall_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/hall_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/hall_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/hall_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/large_hall_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/large_hall_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/large_hall_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/large_hall_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/large_hall_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/one_room_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/one_room_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/one_room_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/one_room_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/one_room_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/platform_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/platform_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/platform_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/platform_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/platform_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/stable_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/stable_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/stable_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/stable_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/tower/stable_5", $$4), 1)
+         "village/plains/zombie/streets",
+         new ehp(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/zombie/streets/corner_01", $$10), 2),
+               Pair.of(ehn.a("village/plains/zombie/streets/corner_02", $$10), 2),
+               Pair.of(ehn.a("village/plains/zombie/streets/corner_03", $$10), 2),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_01", $$10), 4),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_02", $$10), 4),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_03", $$10), 7),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_04", $$10), 7),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_05", $$10), 3),
+               Pair.of(ehn.a("village/plains/zombie/streets/straight_06", $$10), 4),
+               Pair.of(ehn.a("village/plains/zombie/streets/crossroad_01", $$10), 2),
+               Pair.of(ehn.a("village/plains/zombie/streets/crossroad_02", $$10), 1),
+               Pair.of(ehn.a("village/plains/zombie/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/plains/zombie/streets/crossroad_04", $$10), 2),
+                  Pair.of(ehn.a("village/plains/zombie/streets/crossroad_05", $$10), 2),
+                  Pair.of(ehn.a("village/plains/zombie/streets/crossroad_06", $$10), 2),
+                  Pair.of(ehn.a("village/plains/zombie/streets/turn_01", $$10), 3)
+               }
             ),
-            egz.a.b
+            ehp.a.a
          )
       );
-      qg.a(
+      qq.a(
          $$0,
-         "trail_ruins/roads",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/roads/long_road_end", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_end_1", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_section_1", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_section_2", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_section_3", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_section_4", $$5), 1),
-               Pair.of(egx.b("trail_ruins/roads/road_spacer_1", $$5), 1)
+         "village/plains/houses",
+         new ehp(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_1", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_2", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_3", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_4", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_5", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_6", $$6), 1),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_7", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_small_house_8", $$6), 3),
+               Pair.of(ehn.a("village/plains/houses/plains_medium_house_1", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_medium_house_2", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_big_house_1", $$6), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_butcher_shop_1", $$6), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/plains/houses/plains_butcher_shop_2", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_tool_smith_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_fletcher_house_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_shepherds_house_1"), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_armorer_house_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_fisher_cottage_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_tannery_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_cartographer_1", $$6), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_library_1", $$6), 5),
+                  Pair.of(ehn.a("village/plains/houses/plains_library_2", $$6), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_masons_house_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_weaponsmith_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_temple_3", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_temple_4", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_stable_1", $$6), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_stable_2"), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_large_farm_1", $$11), 4),
+                  Pair.of(ehn.a("village/plains/houses/plains_small_farm_1", $$11), 4),
+                  Pair.of(ehn.a("village/plains/houses/plains_animal_pen_1"), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_animal_pen_2"), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_animal_pen_3"), 5),
+                  Pair.of(ehn.a("village/plains/houses/plains_accessory_1"), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_meeting_point_4", $$8), 3),
+                  Pair.of(ehn.a("village/plains/houses/plains_meeting_point_5"), 1),
+                  Pair.of(ehn.g(), 10)
+               }
             ),
-            egz.a.b
+            ehp.a.b
          )
       );
-      qg.a(
+      qq.a(
          $$0,
-         "trail_ruins/buildings",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/buildings/group_hall_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_hall_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_hall_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_hall_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_hall_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/large_room_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/large_room_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/large_room_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/large_room_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/large_room_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/one_room_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/one_room_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/one_room_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/one_room_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/one_room_5", $$4), 1)
+         "village/plains/zombie/houses",
+         new ehp(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_1", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_2", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_3", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_4", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_5", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_6", $$9), 1),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_7", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_small_house_8", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_medium_house_1", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_medium_house_2", $$9), 2),
+               Pair.of(ehn.a("village/plains/zombie/houses/plains_big_house_1", $$9), 2),
+               Pair.of(ehn.a("village/plains/houses/plains_butcher_shop_1", $$9), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_butcher_shop_2", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_tool_smith_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_fletcher_house_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_shepherds_house_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_armorer_house_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_fisher_cottage_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_tannery_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_cartographer_1", $$9), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_library_1", $$9), 3),
+                  Pair.of(ehn.a("village/plains/houses/plains_library_2", $$9), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_masons_house_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_weaponsmith_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_temple_3", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_temple_4", $$9), 2),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_stable_1", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_stable_2", $$9), 2),
+                  Pair.of(ehn.a("village/plains/houses/plains_large_farm_1", $$9), 4),
+                  Pair.of(ehn.a("village/plains/houses/plains_small_farm_1", $$9), 4),
+                  Pair.of(ehn.a("village/plains/houses/plains_animal_pen_1", $$9), 1),
+                  Pair.of(ehn.a("village/plains/houses/plains_animal_pen_2", $$9), 1),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_animal_pen_3", $$9), 5),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_meeting_point_4", $$9), 3),
+                  Pair.of(ehn.a("village/plains/zombie/houses/plains_meeting_point_5", $$9), 1),
+                  Pair.of(ehn.g(), 10)
+               }
             ),
-            egz.a.b
+            ehp.a.b
          )
       );
-      qg.a(
+      $$0.a(
+         b,
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/terminators/terminator_01", $$10), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_02", $$10), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_03", $$10), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_04", $$10), 1)
+            ),
+            ehp.a.a
+         )
+      );
+      qq.a($$0, "village/plains/trees", new ehp($$13, ImmutableList.of(Pair.of(ehn.a($$2), 1)), ehp.a.b));
+      qq.a(
          $$0,
-         "trail_ruins/buildings/grouped",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/buildings/group_full_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_full_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_full_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_full_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_full_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_lower_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_lower_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_lower_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_lower_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_lower_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_upper_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_upper_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_upper_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_upper_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_upper_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_room_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_room_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_room_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_room_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/buildings/group_room_5", $$4), 1)
+         "village/plains/decor",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/plains_lamp_1"), 2), Pair.of(ehn.a($$2), 1), Pair.of(ehn.a($$3), 1), Pair.of(ehn.a($$4), 1), Pair.of(ehn.g(), 2)
             ),
-            egz.a.b
+            ehp.a.b
          )
       );
-      qg.a(
+      qq.a(
          $$0,
-         "trail_ruins/decor",
-         new egz(
-            $$2,
-            List.of(
-               Pair.of(egx.b("trail_ruins/decor/decor_1", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_2", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_3", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_4", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_5", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_6", $$4), 1),
-               Pair.of(egx.b("trail_ruins/decor/decor_7", $$4), 1)
+         "village/plains/zombie/decor",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/plains_lamp_1", $$9), 1),
+               Pair.of(ehn.a($$2), 1),
+               Pair.of(ehn.a($$3), 1),
+               Pair.of(ehn.a($$4), 1),
+               Pair.of(ehn.g(), 2)
             ),
-            egz.a.b
+            ehp.a.b
          )
       );
+      qq.a(
+         $$0,
+         "village/plains/villagers",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/villagers/nitwit"), 1),
+               Pair.of(ehn.a("village/plains/villagers/baby"), 1),
+               Pair.of(ehn.a("village/plains/villagers/unemployed"), 10)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/plains/zombie/villagers",
+         new ehp(
+            $$13,
+            ImmutableList.of(Pair.of(ehn.a("village/plains/zombie/villagers/nitwit"), 1), Pair.of(ehn.a("village/plains/zombie/villagers/unemployed"), 10)),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/common/animals",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/common/animals/cows_1"), 7),
+               Pair.of(ehn.a("village/common/animals/pigs_1"), 7),
+               Pair.of(ehn.a("village/common/animals/horses_1"), 1),
+               Pair.of(ehn.a("village/common/animals/horses_2"), 1),
+               Pair.of(ehn.a("village/common/animals/horses_3"), 1),
+               Pair.of(ehn.a("village/common/animals/horses_4"), 1),
+               Pair.of(ehn.a("village/common/animals/horses_5"), 1),
+               Pair.of(ehn.a("village/common/animals/sheep_1"), 1),
+               Pair.of(ehn.a("village/common/animals/sheep_2"), 1),
+               Pair.of(ehn.g(), 5)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/common/sheep",
+         new ehp($$13, ImmutableList.of(Pair.of(ehn.a("village/common/animals/sheep_1"), 1), Pair.of(ehn.a("village/common/animals/sheep_2"), 1)), ehp.a.b)
+      );
+      qq.a(
+         $$0,
+         "village/common/cats",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/common/animals/cat_black"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_british"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_calico"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_persian"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_ragdoll"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_red"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_siamese"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_tabby"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_white"), 1),
+               Pair.of(ehn.a("village/common/animals/cat_jellie"), 1),
+               Pair.of(ehn.g(), 3)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/common/butcher_animals",
+         new ehp(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/common/animals/cows_1"), 3),
+               Pair.of(ehn.a("village/common/animals/pigs_1"), 3),
+               Pair.of(ehn.a("village/common/animals/sheep_1"), 1),
+               Pair.of(ehn.a("village/common/animals/sheep_2"), 1)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a($$0, "village/common/iron_golem", new ehp($$13, ImmutableList.of(Pair.of(ehn.a("village/common/iron_golem"), 1)), ehp.a.b));
+      qq.a($$0, "village/common/well_bottoms", new ehp($$13, ImmutableList.of(Pair.of(ehn.a("village/common/well_bottom"), 1)), ehp.a.b));
    }
 }
