@@ -1,26 +1,271 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class qs {
-   public static final aju<ejo> a = aju.a(ku.aH, new ajv("trial_chambers_copper_bulb_degradation"));
+   public static final ake<ehp> a = qq.a("village/savanna/town_centers");
+   private static final ake<ehp> b = qq.a("village/savanna/terminators");
+   private static final ake<ehp> c = qq.a("village/savanna/zombie/terminators");
 
-   public static void a(pz<ejo> $$0) {
-      a(
-         $$0,
+   public static void a(qj<ehp> $$0) {
+      iw<efk> $$1 = $$0.a(ld.aH);
+      iv<efk> $$2 = $$1.b(sg.g);
+      iv<efk> $$3 = $$1.b(sg.a);
+      iv<efk> $$4 = $$1.b(sg.b);
+      iw<eke> $$5 = $$0.a(ld.aJ);
+      iv<eke> $$6 = $$5.b(qr.b);
+      iv<eke> $$7 = $$5.b(qr.j);
+      iv<eke> $$8 = $$5.b(qr.m);
+      iw<ehp> $$9 = $$0.a(ld.aL);
+      iv<ehp> $$10 = $$9.b(qq.a);
+      iv<ehp> $$11 = $$9.b(b);
+      iv<ehp> $$12 = $$9.b(c);
+      $$0.a(
          a,
-         List.of(
-            new ejj(
-               List.of(
-                  new ejf(new ejh(dcj.so, 0.1F), eio.b, dcj.sr.n().a(ddv.c, Boolean.valueOf(true))),
-                  new ejf(new ejh(dcj.so, 0.33333334F), eio.b, dcj.sq.n().a(ddv.c, Boolean.valueOf(true))),
-                  new ejf(new ejh(dcj.so, 0.5F), eio.b, dcj.sp.n().a(ddv.c, Boolean.valueOf(true)))
-               )
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(ehn.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(ehn.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(ehn.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(ehn.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(ehn.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(ehn.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
             ),
-            new ejg(ave.bI)
+            ehp.a.b
          )
       );
-   }
-
-   private static void a(pz<ejo> $$0, aju<ejo> $$1, List<ejn> $$2) {
-      $$0.a($$1, new ejo($$2));
+      qq.a(
+         $$0,
+         "village/savanna/streets",
+         new ehp(
+            $$11,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(ehn.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(ehn.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(ehn.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(ehn.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(ehn.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(ehn.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            ehp.a.a
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new ehp(
+            $$12,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(ehn.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            ehp.a.a
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/houses",
+         new ehp(
+            $$11,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(ehn.g(), 5)
+               }
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new ehp(
+            $$12,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(ehn.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(ehn.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(ehn.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(ehn.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(ehn.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(ehn.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(ehn.g(), 5)
+               }
+            ),
+            ehp.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(ehn.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            ehp.a.a
+         )
+      );
+      $$0.a(
+         c,
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(ehn.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(ehn.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            ehp.a.a
+         )
+      );
+      qq.a($$0, "village/savanna/trees", new ehp($$10, ImmutableList.of(Pair.of(ehn.a($$2), 1)), ehp.a.b));
+      qq.a(
+         $$0,
+         "village/savanna/decor",
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(ehn.a($$2), 4),
+               Pair.of(ehn.a($$3), 4),
+               Pair.of(ehn.a($$4), 1),
+               Pair.of(ehn.g(), 4)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(ehn.a($$2), 4),
+               Pair.of(ehn.a($$3), 4),
+               Pair.of(ehn.a($$4), 1),
+               Pair.of(ehn.g(), 4)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/villagers",
+         new ehp(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehn.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(ehn.a("village/savanna/villagers/baby"), 1),
+               Pair.of(ehn.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            ehp.a.b
+         )
+      );
+      qq.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new ehp(
+            $$10,
+            ImmutableList.of(Pair.of(ehn.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(ehn.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            ehp.a.b
+         )
+      );
    }
 }
